--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="background-image: url('../../../assets/background_Index.jpg');">
 <head>
   <meta charset="utf-8">
   <title>PrimeraApp</title>
