--- a/src/index.html
+++ b/src/index.html
@@ -3,4 +3,4 @@
   href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
 />
 
-<app-root style="width: 100%;height: 100%;"></app-root>
+<app-root></app-root>
